--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,7 +10,7 @@ body {
 
 header h1 {
     font-size: 40px;
-    color: #FFCFEF;
+    color: #F4F7FC;
 }
 
 /* ENCABEZADO */
@@ -29,7 +29,7 @@ header nav a:hover {
 }
 
 header p {
-    color: #0A97B0;
+    color: #98a9ac;
     font-size: small;
 }
 
