--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,9 @@ header {
     text-align: center;
     background-color: #263845;
     padding: 20px;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
 }
 
 header nav a {
