--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,17 @@ body {
     padding: 0;
     line-height: 1.6;
 }
+html {
+    scroll-padding-top: 200px; /* Igual a la altura del header */
+}
 
+main {
+    margin-top: 200px;
+}
+
+a:focus {
+    outline: 3px solid #FFD700; 
+    outline-offset: 2px; }
 
 header h1 {
     font-size: 40px;
@@ -15,12 +25,15 @@ header h1 {
 
 /* ENCABEZADO */
 header {
+    top: 0;
+    left: 0;
     text-align: center;
     background-color: #263845;
     padding: 20px;
     position: fixed;
     z-index: 1000;
     width: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 header nav a {
