--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,7 @@ body {
     line-height: 1.6;
 }
 html {
-    scroll-padding-top: 200px; /* Igual a la altura del header */
+    scroll-padding-top: 200px; 
 }
 
 main {
